src/compile_test/must_fail/bad_compare_2.rs
use bounded_types::*;

fn main() {
    let ok: BoundedInt<0,10> = 1.into();
    assert!(ok);
}